--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,20 @@ android {
         ]
     }
 
+    signingConfigs {
+        // We use a bundled debug keystore, to allow debug builds from CI to be upgradable
+        debug {
+            storeFile rootProject.file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
+
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -44,6 +57,13 @@ android {
 
     buildFeatures {
         viewBinding true
+    }
+
+    packagingOptions {
+        // Multiple dependency bring these files in. Exclude them to enable
+        // our test APK to build (has no effect on our AARs)
+        excludes += "/META-INF/AL2.0"
+        excludes += "/META-INF/LGPL2.1"
     }
 }
 
@@ -79,9 +99,9 @@ dependencies {
     implementation "com.squareup.picasso:picasso:$picasoo"
 
     // Navigation Components
-    implementation "androidx.navigation:navigation-runtime-ktx:2.4.0-alpha04"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha04"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha04"
+    implementation "androidx.navigation:navigation-runtime-ktx:2.4.0-alpha05"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha05"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha05"
 
     def fragment = "1.4.0-alpha04"
     //implementation "androidx.fragment:fragment-ktx:$fragment"
@@ -107,7 +127,7 @@ dependencies {
     def pagingVersion = '3.1.0-alpha02'
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
 
-    implementation deps.stripe
+    implementation "com.stripe:stripe-android:$versions.stripe"
 
 
 }
