--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,29 @@
 buildscript {
     ext.kotlin_version = "1.5.10"
     apply from: 'versions.gradle'
+    ext.dokkaVersion = '1.5.0'
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.37'
+  //      classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
+//        classpath "org.jetbrains.kotlinx:binary-compatibility-validator:0.6.0"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:7.1.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id 'com.diffplug.spotless' version '5.7.0'
 }
 
 allprojects {
@@ -21,8 +32,51 @@ allprojects {
         google()
         jcenter()
     }
+
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+
+    task checkstyle(type: Checkstyle) {
+        showViolations = true
+        configFile file("../settings/checkstyle.xml")
+        source 'src/main/java'
+        include '**/*.java'
+        exclude '**/gen/**'
+        exclude '**/R.java'
+        exclude '**/BuildConfig.java'
+
+        // empty classpath
+        classpath = files()
+    }
+
+    apply plugin: 'com.diffplug.spotless'
+
+    spotless {
+        kotlin {
+            target '**/*.kt'
+            targetExclude("$buildDir/**/*.kt")
+            targetExclude('bin/**/*.kt')
+
+            ktlint("0.40.0")
+            licenseHeaderFile rootProject.file('spotless/copyright.kt')
+        }
+    }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+//if (JavaVersion.current().isJava8Compatible()) {
+//    allprojects {
+//        tasks.withType(Javadoc) {
+//            options.addStringOption('Xdoclint:none', '-quiet')
+//        }
+//    }
+//}
+
+//apply plugin: 'binary-compatibility-validator'
+//apply plugin: 'org.jetbrains.dokka'
+
+//tasks.dokkaHtmlMultiModule.configure {
+//    outputDirectory = new File("${project.rootDir}/docs")
+//}
+
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
