--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-STRIPE_PAYMENTSHEET_BACKEND_URL=
+#STRIPE_PAYMENTSHEET_BACKEND_URL=
