lint added for clean code, spotless is used

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           java-version: 11
 
       - name: Build project
-        run: ./gradlew spotlessCheck assembleDebug lintDebug --stacktrace
+        run: ./gradlew spotlessCheck --stacktrace
 
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v2
