these changes are just cleanup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Self cleanup
+        run: ./gradlew spotlessApply
 
       - name: Build project
         run: ./gradlew spotlessCheck --stacktrace
