--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs"
 
-apply from: "$project.rootDir/spotless.gradle"
+//apply from: "$project.rootDir/spotless.gradle"
 
 def getBackendUrl() {
     return findProperty('STRIPE_PAYMENTSHEET_BACKEND_URL') ?: ""
@@ -18,6 +18,8 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+        buildConfigField  "String", "STRIPE_KEY", STRIPE_PUBLISHABLE_KEY
+        buildConfigField  "String", "STRIPE_SECRET_KEY", STRIPE_SECRET_KEY
         applicationId "com.tcs.ecom"
         minSdkVersion 26
         targetSdkVersion 30
