--- a/.github/ci-gradle.properties
+++ b/.github/ci-gradle.properties
@@ -19,3 +19,4 @@ org.gradle.jvmargs=-Xmx5120m
 org.gradle.workers.max=2
 kotlin.incremental=false
 kotlin.compiler.execution.strategy=in-process
+STRIPE_PAYMENTSHEET_BACKEND_URL="https://bhuvancom.herokuapp.com/api/"
