--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        buildConfigField  "String", "STRIPE_KEY", STRIPE_PUBLISHABLE_KEY
-        buildConfigField  "String", "URL" , STRIPE_PAYMENTSHEET_BACKEND_URL
+        buildConfigField "String", "STRIPE_KEY", (System.getenv('STRIPE_KEY') != null) ? System.getenv('STRIPE_KEY') : STRIPE_PUBLISHABLE_KEY
+        buildConfigField "String", "URL", STRIPE_PAYMENTSHEET_BACKEND_URL
         applicationId "com.tcs.ecom"
         minSdkVersion 26
         targetSdkVersion 30
