--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,13 +13,24 @@ def getBackendUrl() {
     return findProperty('STRIPE_PAYMENTSHEET_BACKEND_URL') ?: ""
 }
 
+def getProps(String propName) {
+    def propsFile = rootProject.file('local.properties')
+    if (propsFile.exists()) {
+        def props = new Properties()
+        props.load(new FileInputStream(propsFile))
+        return props[propName]
+    } else {
+        return System.getenv('URL')
+    }
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         buildConfigField "String", "STRIPE_KEY", (System.getenv('STRIPE_KEY') != null) ? System.getenv('STRIPE_KEY') : STRIPE_PUBLISHABLE_KEY
-        buildConfigField "String", "URL", STRIPE_PAYMENTSHEET_BACKEND_URL
+        buildConfigField "String", "URL", getProps('STRIPE_PAYMENTSHEET_BACKEND_URL')
         applicationId "com.tcs.ecom"
         minSdkVersion 26
         targetSdkVersion 30
